# copy-paste-aug

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
configs/: default.yaml  instance_transformer_aug.yaml  instance_transformer_no_aug.yaml
configs/dataset/: default.yaml
configs/evaluation/: default.yaml
configs/models/: default.yaml  elt_50.yaml  simple_instance_transformer.yaml
configs/training/: default.yaml
cpa/: datasets.py  elt_train_inst_seg.py  training.py
cpa/augs/: __init__.py  copy_paste.py
cpa/modeling/: __init__.py  elt.py  instance_transformer.py
cpa/premade_datasets/: __init__.py  coco2017.py  harmonized_copy_paste.py
cpa/tinyrfdeter/: data.py  lightning.py  model.py  muon.py
cpa/utils/: __init__.py  configs.py  dataset_subset.py
cpa/yolo/: __init__.py  data.py  lightning.py
hpc/: submit_train_gpu.lsf
scripts/: generate_configs.py
tests/: test_copy_paste.py  test_data.py  test_instance_transformer.py  test_premade_coco2017.py  test_tinyrfdeter_lightning.py  test_yolo_pipeline.py
